tests/fixtures/invalid/invalid_primitive_type.avsc
{
  "type": "record",
  "name": "TestRecord",
  "fields": [
    {
      "name": "typo_field",
      "type": {
        "type": "strign"
      }
    }
  ]
}
